# triagegpt

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
benchmarks/: baseline.json  bench_retrieval.py
src/triagegpt/: __init__.py  attribution.py  cli.py  eval.py  index.py  ingest.py  models.py  pipeline.py  providers.py  report.py  suggest.py  synthetic.py
tests/: test_attribution.py  test_bench.py  test_cli.py  test_contracts.py  test_golden.py  test_ingest.py  test_pipeline.py  test_report.py  test_retrieval_quality.py
tests/golden/: report.json  report.md
