[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "triagegpt"
version = "0.5.0"
description = "Defect triage and log summarization tool with embeddings retrieval and CI posting."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "SAY-5" }]
keywords = ["triage", "log-analysis", "retrieval", "embeddings", "ci", "developer-tools"]
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "mypy>=1.11",
]

[project.scripts]
triagegpt = "triagegpt.cli:main"

[project.urls]
Homepage = "https://github.com/SAY-5/triagegpt"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
filterwarnings = ["ignore::pytest.PytestCollectionWarning"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.10"
strict = true
files = ["src"]
